objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Accept_Reject__c</fullName>
        <label>Accept/Reject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>150.67</defaultValue>
        <label>Amount (Payment)</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Users_Work_Order__c</fullName>
        <formula>Contact.Id =  $User.ContactId</formula>
        <label>Current User&apos;s Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depot_Repair_Status__c</fullName>
        <label>Depot Repair Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Disassembly</fullName>
                </value>
                <value>
                    <fullName>Awaiting Authorization</fullName>
                </value>
                <value>
                    <fullName>Awaiting Parts</fullName>
                </value>
                <value>
                    <fullName>Repairing</fullName>
                </value>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entitlement_Is_Active__c</fullName>
        <formula>IF( (Entitlement.EndDate &gt; TODAY() || ISBLANK(Entitlement.EndDate)) &amp;&amp; NOT(ISBLANK(EntitlementId)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL_Is_Linked_To_Maintenance_Plan__c</fullName>
        <formula>NOT(ISBLANK(MaintenancePlanId))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Linked To Maintenance Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Is_Linked_To_Service_Contract__c</fullName>
        <formula>NOT( ISBLANK( ServiceContractId ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Linked To Service Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Check__c</fullName>
        <label>Inventory Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Price_Consumed_Products__c</fullName>
        <label>Total Price (Consumed Products)</label>
        <summarizedField>ProductConsumed.Total_Price__c</summarizedField>
        <summaryForeignKey>ProductConsumed.WorkOrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work_End__c</fullName>
        <description>Time when the work on site is finished, also displayed in Service Report</description>
        <label>Work End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type__c</fullName>
        <label>Work Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Start__c</fullName>
        <description>Start time of the work on site to be displayed in the Service Report</description>
        <label>Work Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>temp_work_time__c</fullName>
        <label>temp work time</label>
        <type>DateTime</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>